Automatically increase difficulty over time

--- a/experiments/Cargo.toml
+++ b/experiments/Cargo.toml
@@ -10,3 +10,4 @@ engine = { path = "../engine" }
 rand_derive2 = "0.1"
 rand = "0.8"
 strum = { version = "0.20", features = ["derive"] }
+rand_distr = "0.4"
