--- a/experiments/Cargo.toml
+++ b/experiments/Cargo.toml
@@ -5,9 +5,14 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
-engine = { path = "../engine" }
+#engine = { path = "../engine" }
+eframe = "0.12"
 rand_derive2 = "0.1"
 rand = "0.8"
 strum = { version = "0.20", features = ["derive"] }
 rand_distr = "0.4"
+getrandom = { version = "0.2", features = ["js"] }
