--- a/experiments/Cargo.toml
+++ b/experiments/Cargo.toml
@@ -17,7 +17,7 @@ strum = { version = "0.20", features = ["derive"] }
 rand_distr = "0.4"
 getrandom = { version = "0.2", features = ["js"] }
 console_error_panic_hook = "0.1"
-web-sys = { version = "0.3", features = ["console"]}
+#web-sys = { version = "0.3", features = ["console"]}
 js-sys = "0.3"
 derive_more = "0.99"
 retain_mut = "0.1"
